[gd_scene load_steps=32 format=3 uid="uid://30jb4kc5kf5p"]

[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://GameBoard/Cursor/Cursor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Units/Unit.tscn" id="2"]
[ext_resource type="Script" path="res://GameBoard/GameBoard.gd" id="3"]
[ext_resource type="Resource" path="res://GameBoard/Grid.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://n825j345khoi" path="res://UnitOverlay/UnitOverlay.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dxyfefsgkgc4l" path="res://GameBoard/UnitPath.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://Units/squirrel.png" id="7"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://Units/bear.png" id="8"]
[ext_resource type="Script" path="res://Stats.gd" id="8_tao0e"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://Units/bugcat.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dvdl8qgq8sn3p" path="res://Units/bear_potrait.png" id="9_ucved"]
[ext_resource type="PackedScene" uid="uid://de53ukdqyusan" path="res://Background/Map.tscn" id="10"]
[ext_resource type="Script" path="res://Inventory.gd" id="10_lswcb"]
[ext_resource type="Texture2D" uid="uid://cncsxmnd1f4i7" path="res://Units/bugcat_portrait.png" id="11_k3cfd"]
[ext_resource type="Texture2D" uid="uid://cmvqlbvejw41" path="res://GUI/label_HP_bg.png" id="11_o3boy"]
[ext_resource type="Texture2D" uid="uid://b4jqr0korecix" path="res://GUI/label_HP.png" id="12_juc27"]
[ext_resource type="Texture2D" uid="uid://bkev8ycxujywe" path="res://Units/squirrel_potrait.png" id="12_ncdxd"]
[ext_resource type="FontFile" uid="uid://kn7a7jmrqmyo" path="res://Font/Comfortaa-Bold.ttf" id="13_y2s58"]
[ext_resource type="Texture2D" uid="uid://bla0fbvo1nepc" path="res://GUI/lifebar_bg.png" id="14_rhey7"]
[ext_resource type="Texture2D" uid="uid://bknm7dhv1bxy5" path="res://GUI/lifebar_fill.png" id="15_al6yv"]

[sub_resource type="Curve2D" id="Curve2D_xhr17"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_gom2p"]
script = ExtResource("8_tao0e")
move_range = 6
strength = 10
defense = 10
health = 10
dexterity = 10
speed = 10
luck = 10

[sub_resource type="Resource" id="Resource_83tal"]
script = ExtResource("10_lswcb")
usable_weapons = Array[int]([])
weapons = Array[Resource("res://Weapon.gd")]([])
usable_equipment_materials = Array[int]([])
accessory_limit = 1
accessories = Array[Resource("res://Equipment.gd")]([])

[sub_resource type="Curve2D" id="Curve2D_xsn8u"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_wafp8"]
script = ExtResource("8_tao0e")
move_range = 6
strength = 10
defense = 10
health = 10
dexterity = 10
speed = 10
luck = 10

[sub_resource type="Resource" id="Resource_fnjgf"]
script = ExtResource("10_lswcb")
usable_weapons = Array[int]([])
weapons = Array[Resource("res://Weapon.gd")]([])
usable_equipment_materials = Array[int]([])
accessory_limit = 1
accessories = Array[Resource("res://Equipment.gd")]([])

[sub_resource type="Curve2D" id="Curve2D_uqhbv"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_khexv"]
script = ExtResource("8_tao0e")
move_range = 6
strength = 10
defense = 10
health = 10
dexterity = 10
speed = 10
luck = 10

[sub_resource type="Resource" id="Resource_0mb7w"]
script = ExtResource("10_lswcb")
usable_weapons = Array[int]([])
weapons = Array[Resource("res://Weapon.gd")]([])
usable_equipment_materials = Array[int]([])
accessory_limit = 1
accessories = Array[Resource("res://Equipment.gd")]([])

[sub_resource type="Theme" id="Theme_hmw7w"]
default_font = ExtResource("13_y2s58")
default_font_size = 32

[sub_resource type="Theme" id="Theme_4bcgd"]
default_font = ExtResource("13_y2s58")
default_font_size = 24

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource("10")]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("3")
grid = ExtResource("4")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("5")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("6")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("1")]

[node name="Bear" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(800, 400)
curve = SubResource("Curve2D_xhr17")
stats = SubResource("Resource_gom2p")
portrait = ExtResource("9_ucved")
inventory = SubResource("Resource_83tal")
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[node name="Cat" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(100, 500)
curve = SubResource("Curve2D_xsn8u")
stats = SubResource("Resource_wafp8")
portrait = ExtResource("11_k3cfd")
inventory = SubResource("Resource_fnjgf")
player = true
skin = ExtResource("9")
skin_offset = Vector2(5, 12)

[node name="Squirrel" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(100, 300)
curve = SubResource("Curve2D_uqhbv")
stats = SubResource("Resource_khexv")
portrait = ExtResource("12_ncdxd")
inventory = SubResource("Resource_0mb7w")
player = true
skin = ExtResource("7")
skin_offset = Vector2(6, 17)

[node name="UnitGUI" type="MarginContainer" parent="GameBoard"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 25.0
offset_right = 124.0
offset_bottom = 72.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Background" type="MarginContainer" parent="GameBoard/UnitGUI"]
layout_mode = 2
theme_override_constants/margin_left = -25
theme_override_constants/margin_top = -25
theme_override_constants/margin_right = -25
theme_override_constants/margin_bottom = -25

[node name="Texture" type="TextureRect" parent="GameBoard/UnitGUI/Background"]
layout_mode = 2
texture = ExtResource("11_o3boy")

[node name="PortraitAndDetails" type="HBoxContainer" parent="GameBoard/UnitGUI"]
layout_mode = 2

[node name="Portrait" type="HBoxContainer" parent="GameBoard/UnitGUI/PortraitAndDetails"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="GameBoard/UnitGUI/PortraitAndDetails/Portrait"]
layout_mode = 2
texture = ExtResource("12_ncdxd")
expand_mode = 3

[node name="Details" type="VBoxContainer" parent="GameBoard/UnitGUI/PortraitAndDetails"]
layout_mode = 2

[node name="Name" type="MarginContainer" parent="GameBoard/UnitGUI/PortraitAndDetails/Details"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2

[node name="Label" type="Label" parent="GameBoard/UnitGUI/PortraitAndDetails/Details/Name"]
layout_mode = 2
theme = SubResource("Theme_hmw7w")
text = "Name
"
vertical_alignment = 1

[node name="HealthBar" type="HBoxContainer" parent="GameBoard/UnitGUI/PortraitAndDetails/Details"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="GameBoard/UnitGUI/PortraitAndDetails/Details/HealthBar"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
texture = ExtResource("12_juc27")
stretch_mode = 3

[node name="Bar" type="TextureProgressBar" parent="GameBoard/UnitGUI/PortraitAndDetails/Details/HealthBar"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("14_rhey7")
texture_progress = ExtResource("15_al6yv")

[node name="Health" type="Label" parent="GameBoard/UnitGUI/PortraitAndDetails/Details"]
custom_minimum_size = Vector2(100, 23)
layout_mode = 2
theme = SubResource("Theme_4bcgd")
text = "10/10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ActionGUI" type="MarginContainer" parent="GameBoard"]
offset_left = 45.0
offset_top = 45.0
offset_right = 115.0
offset_bottom = 122.0

[node name="Background" type="MarginContainer" parent="GameBoard/ActionGUI"]
layout_mode = 2
theme_override_constants/margin_left = -25
theme_override_constants/margin_top = -25
theme_override_constants/margin_right = -25
theme_override_constants/margin_bottom = -25

[node name="Texture" type="TextureRect" parent="GameBoard/ActionGUI/Background"]
layout_mode = 2
texture = ExtResource("11_o3boy")

[node name="ActionList" type="VBoxContainer" parent="GameBoard/ActionGUI"]
layout_mode = 2

[node name="Attack" type="Label" parent="GameBoard/ActionGUI/ActionList"]
layout_mode = 2
text = "Attack"
vertical_alignment = 1

[node name="Item" type="Label" parent="GameBoard/ActionGUI/ActionList"]
layout_mode = 2
text = "Item"
vertical_alignment = 1

[node name="Wait" type="Label" parent="GameBoard/ActionGUI/ActionList"]
layout_mode = 2
text = "Wait"
vertical_alignment = 1

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
